--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
     "pyyaml>=6.0",
     # Utilities
     "rich>=13.0.0",
+    "trackio>=0.15.0",
 ]
 
 [project.optional-dependencies]
