--- a/examples/maths/configs/sft.yaml
+++ b/examples/maths/configs/sft.yaml
@@ -22,14 +22,13 @@ model:
 training:
   algorithm: "sft"
   learning_rate: 2e-5
-  batch_size: 1  # Reduced for smaller GPU
+  batch_size: 8
   gradient_accumulation_steps: 8
   max_seq_length: 2048  # Limit sequence length
   num_train_epochs: 6
   warmup_ratio: 0.1
   weight_decay: 0.01
   max_grad_norm: 1.0
-  max_steps: 50  # Quick test
 
 output_dir: "./output/sft"
 seed: 42
