--- a/examples/maths/configs/rl.yaml
+++ b/examples/maths/configs/rl.yaml
@@ -5,6 +5,7 @@ model:
   dtype: "bfloat16"
   attn_implementation: "sdpa"
   trust_remote_code: true
+  compile: true
   lora:
     enabled: true
     r: 16
