--- a/examples/maths/configs/sft.yaml
+++ b/examples/maths/configs/sft.yaml
@@ -5,6 +5,7 @@ model:
   dtype: "bfloat16"
   attn_implementation: "sdpa"
   trust_remote_code: true
+  compile: true
   lora:
     enabled: true
     r: 64
@@ -22,8 +23,8 @@ model:
 training:
   algorithm: "sft"
   learning_rate: 2e-5
-  batch_size: 8
-  gradient_accumulation_steps: 8
+  batch_size: 2
+  gradient_accumulation_steps: 32
   max_seq_length: 2048  # Limit sequence length
   num_train_epochs: 6
   warmup_ratio: 0.1
