--- a/examples/maths/configs/rl.yaml
+++ b/examples/maths/configs/rl.yaml
@@ -18,12 +18,19 @@ model:
 training:
   algorithm: "grpo"  # GRPO is stable in TRL
   learning_rate: 1e-6
-  batch_size: 2
-  gradient_accumulation_steps: 4
-  max_steps: 50
+  batch_size: 256
+  gradient_accumulation_steps: 1
+  num_train_epochs: 1
   sync_weights: true
   max_seq_length: 1024
   report_to: "none"
+  clip_range_ratio: [0.8, 1.28]
+
+rollout:
+  temperature: 0.6
+  max_turns: 5
+  top_p: 0.95
+  top_k: 50
 
 output_dir: "./output/rl"
 seed: 42
