--- a/examples/maths/configs/rl.yaml
+++ b/examples/maths/configs/rl.yaml
@@ -1,7 +1,7 @@
 # RL Training Configuration for Math Tool-Use (ReTool style)
 
 model:
-  name_or_path: "Qwen/Qwen2.5-0.5B-Instruct"
+  name_or_path: "Qwen/Qwen3-0.6B"
   dtype: "bfloat16"
   attn_implementation: "sdpa"
   trust_remote_code: true
@@ -16,22 +16,24 @@ model:
       - v_proj
 
 training:
-  algorithm: "grpo"  # GRPO is stable in TRL
+  algorithm: "grpo"
   learning_rate: 1e-6
-  batch_size: 256
+  batch_size: 1
   gradient_accumulation_steps: 1
   num_train_epochs: 1
-  sync_weights: true
   max_seq_length: 1024
+  sync_weights: true
   report_to: "none"
   clip_range_ratio: [0.8, 1.28]
 
-rollout:
-  temperature: 0.6
-  max_turns: 5
-  top_p: 0.95
-  top_k: 50
+  inference:
+    name_or_path: "Qwen/Qwen3-0.6B"
+    temperature: 0.6
+    max_new_tokens: 2048
+    top_k: 50
+    top_p: 0.95
 
+max_turns: 5
 output_dir: "./output/rl"
 seed: 42
 logging_steps: 5
