--- a/examples/maths/configs/sft.yaml
+++ b/examples/maths/configs/sft.yaml
@@ -1,7 +1,7 @@
 # SFT Training Configuration for Math Tool-Use
 
 model:
-  name_or_path: "Qwen/Qwen3-0.6B"  # ReTool used Qwen2.5-32B-Instruct
+  name_or_path: "Qwen/Qwen3-0.6B"
   dtype: "bfloat16"
   attn_implementation: "sdpa"
   trust_remote_code: true
@@ -25,7 +25,7 @@ training:
   learning_rate: 2e-5
   batch_size: 2
   gradient_accumulation_steps: 32
-  max_seq_length: 2048  # Limit sequence length
+  max_seq_length: 2048
   num_train_epochs: 6
   warmup_ratio: 0.1
   weight_decay: 0.01
